<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.san.rockscissorpaper.MainActivity">


    <TextView
        android:id="@+id/tv_humanChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/HumanChoice"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/iv_HumanChoice"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/tv_humanChoice"
        android:layout_alignStart="@+id/tv_humanChoice"
        android:layout_below="@+id/tv_humanChoice"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/rock" />

    <TextView
        android:id="@+id/tv_ComputerChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_HumanChoice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/ComputerChoice"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/iv_ComputerChoice"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@+id/tv_ComputerChoice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        app:srcCompat="@drawable/paper" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_ComputerChoice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/Score"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <Button
        android:id="@+id/b_rock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_score"
        android:layout_alignStart="@+id/tv_score"
        android:layout_below="@+id/tv_score"
        android:layout_marginTop="18dp"
        android:text="@string/Rock" />

    <Button
        android:id="@+id/b_scissors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/b_rock"
        android:layout_alignBottom="@+id/b_rock"
        android:layout_centerHorizontal="true"
        android:text="@string/Scissors" />

    <Button
        android:id="@+id/b_paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tv_score"
        android:layout_alignRight="@+id/tv_score"
        android:layout_alignTop="@+id/b_scissors"
        android:text="@string/Paper" />

</RelativeLayout>
